# f1tenth_dev

./: .gitignore  .gitmodules  README.md
centerline_tools/: README.md  generate_centerline.py  package.xml  scanned_2026042400.pgm  scanned_2026042400.yaml  setup.cfg  setup.py
centerline_tools/centerline_output/: centerline_metadata.yaml  centerline_points_raw.csv  centerline_points_smooth.csv  centerline_points_smooth.npy
centerline_tools/centerline_tools/: centerline_publisher_node.py  csv_loader.py
centerline_tools/config/: centerline_publisher.yaml
centerline_tools/launch/: centerline_publisher.launch.py
drive_arbitration/: CMakeLists.txt  package.xml
drive_arbitration/config/: drive_arbitration_params.yaml
drive_arbitration/launch/: drive_arbitrator_launch.py
drive_arbitration/src/: drive_arbitrator_node.cpp
f1tenth_gym_ros/: Dockerfile  docker-compose.yml  f1tenth_rocker_loc_start.sh  f1tenth_rocker_start.sh  install_localization_env.sh  setup.py
f1tenth_gym_ros/config/: f1tenth_sim_async.yaml  sim.yaml
f1tenth_gym_ros/f1tenth_gym_ros/: gym_bridge.py  gym_bridge_slam.py
f1tenth_gym_ros/launch/: gym_bridge.rviz  gym_bridge_launch.py  gym_bridge_slam_launch.py
f1tenth_gym_ros/maps/: Spielberg_magp2.yaml  Yacht_Office_20260311_00.pgm  Yacht_Office_20260311_00.yaml  levine_hall_scanned.pgm  levine_hall_scanned.yaml  magp2.yaml
path_following/boundary_detection/: CMakeLists.txt  package.xml
path_following/boundary_detection/launch/: boundary_detection_launch.py
path_following/boundary_detection/src/: boundary_detection_node.cpp  boundary_detector.cpp  boundary_detector.hpp
path_following/path_following/: CMakeLists.txt  package.xml
path_following/path_following/config/: planner_params.yaml  planner_params_smooth.yaml
path_following/path_following/launch/: path_following_launch.py  path_following_smooth_launch.py
path_following/path_following/src/: controller_node.cpp  planner_node.cpp  visualization_node.cpp
path_following/simple_path_following/: CMakeLists.txt  package.xml
path_following/simple_path_following/launch/: path_following_launch.py
path_following/simple_path_following/src/: controller_node.cpp  planner_node.cpp  visualization_node.cpp
path_following_v2/: CMakeLists.txt  package.xml
path_following_v2/config/: path_following_v2.yaml
path_following_v2/launch/: path_following_v2.launch.py
path_following_v2/src/: path_following_v2_node.cpp
pnc/path_following/src/: planner_node.cpp
reactive_control/: README.md
reactive_control/boundary_detection/: CMakeLists.txt  package.xml
reactive_control/boundary_detection/src/: node.cpp
reactive_control/gap_follow/: CMakeLists.txt
reactive_control/gap_follow/src/: reactive_node.cpp
reactive_control/safety_bubble/: CMakeLists.txt  README.md  package.xml  setup.py
reactive_control/safety_bubble/config/: params.yaml
reactive_control/safety_bubble/launch/: safety_bubble_launch.py
reactive_control/safety_bubble/msg/: BubbleInfo.msg
reactive_control/safety_bubble/src/: safety_bubble_node.cpp  visualization_node.cpp
